check hidden content

--- a/sams/introduction.ipynb
+++ b/sams/introduction.ipynb
@@ -5,8 +5,8 @@
    "id": "57761318-653f-4a27-a8fa-295e8837d335",
    "metadata": {},
    "source": [
-    "Welcome to the Jupyter Lab workshop for SAMS 2023!\n",
-    "==================================================\n",
+    "Introduction to the Jupyter Lab interface\n",
+    "=========================================\n",
     "\n",
     "Today computing is used everywhere. We are going to introduce you to Jupyter Lab, which is a computing environment that you can use to write Python code to solve problems, do analysis, make figures, and more."
    ]
@@ -41,14 +41,14 @@
     "\n",
     "The next cell is a Code cell. It looks different than a Markdown cell. The background is light grey, and there is a count indicator next to it like `[N]:` which indicates if the cell has been run, and the execution count. \n",
     "\n",
-    "You can run this cell several different ways. First select it by clicking on it. Then press Ctrl-enter to run it, or click the run button in the button menu under the tab. It looks like an arrow pointing to the right.\n",
+    "You can run this cell several different ways. First select it by clicking on it. Then press Ctrl-enter to run it, or click the run button in the button menu under the tab. It looks like an arrow pointing to the right. Note that each time you run the cell, the execution count will become one higher.\n",
     "\n",
     "![image.png](attachment:e7aceb92-29fb-4f56-ad4a-ae313fb14f41.png)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "36f8bf18-daf7-4d8a-b994-86c4a3d04bb7",
    "metadata": {},
    "outputs": [
@@ -65,12 +65,72 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2f761ff0-1189-4794-b7e2-b1d705ffb8d1",
+   "metadata": {},
+   "source": [
+    "In the cell above we ran our first Python command that prints a string. The `print` is in green because it is a command. `'Hello World'` is the string. It is red in color to indicate it is a string. We use single quotes here, but you can also use double quotes.\n",
+    "\n",
+    "Select the empty cell below, and then type a command to output `Hello SAMS!`. The cell below that has a solution in it."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d1b91b6-c4d1-4832-a446-6a0fa6e989c8",
+   "id": "948fb539-0111-4864-a796-046a5a28163e",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "29dd8559-1452-4e48-9e5a-274494431581",
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello SAMS!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Hello SAMS!')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2638aeb-ff4b-461e-a132-80cf7a2fda39",
+   "metadata": {},
+   "source": [
+    "# Introduction to Python with Jupyter\n",
+    "\n",
+    "Our aim today is to get just enough introduction to some big ideas in Python to do some data analysis. Now you know that Jupyter notebooks are a way to type code into a cell, and then run it to see what the output is."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02b36e88-4a5d-497e-a40f-2457b6becc67",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5442f575-355d-4cd6-a35f-7b06008c35f0",
+   "metadata": {},
+   "source": [
+    "# Resources\n",
+    "\n",
+    "1. [pycse](https://kitchingroup.cheme.cmu.edu/pycse/intro.html) This exhaustive resource covers Python computing in science and engineering."
+   ]
   }
  ],
  "metadata": {
