--- a/sams/introduction.ipynb
+++ b/sams/introduction.ipynb
@@ -37,7 +37,7 @@
    "source": [
     "## Jupyter notebooks\n",
     "\n",
-    "You are reading a Jupyter notebook. It is a file that ends in .ipynb, in this case you are reading `introduction.ipynb`. A notebook is made of cells; this one is a text-based cell using a markup language called Markdown. It is a pretty simply way to write plain text. \n",
+    "You are reading a Jupyter notebook. It is a file that ends in .ipynb, in this case you are reading `introduction.ipynb`. A notebook is made of cells; this one is a text-based cell using a markup language called Markdown. It is a pretty simple way to write plain text. \n",
     "\n",
     "The next cell is a Code cell. It looks different than a Markdown cell. The background is light grey, and there is a count indicator next to it like `[N]:` which indicates if the cell has been run, and the execution count. \n",
     "\n",
@@ -71,7 +71,7 @@
    "source": [
     "In the cell above we ran our first Python command that prints a string. The `print` is in green because it is a command. `'Hello World'` is the string. It is red in color to indicate it is a string. We use single quotes here, but you can also use double quotes.\n",
     "\n",
-    "Select the empty cell below, and then type a command to output `Hello SAMS!`. The cell below that has a solution in it."
+    "Select the empty cell below, and then type a command to output `Hello SAMS!`. "
    ]
   },
   {
@@ -81,28 +81,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "29dd8559-1452-4e48-9e5a-274494431581",
-   "metadata": {
-    "tags": [
-     "hide-input"
-    ]
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello SAMS!\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('Hello SAMS!')"
-   ]
   },
   {
    "cell_type": "markdown",
