update next steps, some new pandas bugs.

--- a/sams/project.ipynb
+++ b/sams/project.ipynb
@@ -37,7 +37,7 @@
     "\n",
     "Ideas for how to use this dataset includes looking at different temperature profiles of countries, hemispheres, or cities of different sizes (Philadelphia vs Indiana, PA). It would be interesting to see if there are trends based on time of year (ex. How do the January temperatures compare), or look at how the minimum or maximum temperatures change from year to year in a particular location.\n",
     "\n",
-    "# Global CO2 levels from year 0 to 2014. \n",
+    "# Global CO<sub>2</sub> levels from year 0 to 2014. \n",
     "\n",
     "Can be found at the following file name: mole_fraction_of_carbon_dioxide_in_air_input4MIPs_GHGConcentrations_CMIP_UoM-CMIP-1-1-0_gr3-GMNHSH_000001-201412.csv\n",
     "\n",
@@ -45,9 +45,9 @@
     "\n",
     "https://www.co2.earth/historical-co2-datasets\n",
     "\n",
-    "This is the IAC Switzerland global CO2 monthly csv file. This data will likely contain missing numbers for some years and months.\n",
+    "This is the IAC Switzerland global CO<sub>2</sub> monthly csv file. This data will likely contain missing numbers for some years and months.\n",
     "\n",
-    "Ideas for how to use this include fitting a model to the data to see how the CO2 levels have changed. There may be different behaviors before and after the 1900s. It may be interesting to see if there are spikes in the data and if so where do they happen. Are there months or years where these spike are more common? Are these associated with global events?"
+    "Ideas for how to use this include fitting a model to the data to see how the CO<sub>2</sub> levels have changed. There may be different behaviors before and after the 1900s. It may be interesting to see if there are spikes in the data and if so where do they happen. Are there months or years where these spike are more common? Are these associated with global events?"
    ]
   },
   {
@@ -79,7 +79,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
