--- a/_sources/introduction.ipynb
+++ b/_sources/introduction.ipynb
@@ -1343,7 +1343,7 @@
     "\n",
     "This concludes the introduction. This covered just enough material to get to the next step in our program, which is data analysis of historical temperature data.\n",
     "\n",
-    "You can open it [here](data-science.ipynb)."
+    "The next step in our workshop starts [here](data-science.ipynb)."
    ]
   },
   {
@@ -1418,7 +1418,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
