--- a/sams/getting-started.ipynb
+++ b/sams/getting-started.ipynb
@@ -30,16 +30,10 @@
     "\n",
     "You can simply hit the blue Select button to get started. You don't need to do anything else before class.\n",
     "\n",
-    "See you tomorrow!"
+    "See you tomorrow!\n",
+    "\n",
+    "See this video for a step by step guide:  https://youtube.com/live/dp0ubCdqs0g?feature=share"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "039ce870-a779-4dbd-8dec-d646081f88ca",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
