mv solutions to new notebook

--- a/sams/introduction.ipynb
+++ b/sams/introduction.ipynb
@@ -79,6 +79,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7752a815-dc9d-40a6-a196-26f49d69f6b7",
+   "metadata": {},
+   "source": [
+    "See the [solution](solutions.ipynb#Hello-SAMS)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b2638aeb-ff4b-461e-a132-80cf7a2fda39",
    "metadata": {},
    "source": [
@@ -347,24 +355,15 @@
      "hide-input"
     ]
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3.0, 2.0)"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5fee2333-b099-4664-8ab5-92a3a9970224",
+   "metadata": {},
    "source": [
-    "a = 1\n",
-    "b = -5\n",
-    "c = 6\n",
-    "\n",
-    "(-b + (b**2 - 4 * a * c)**0.5) / (2 * a), (-b - (b**2 - 4 * a * c)**0.5) / (2 * a)"
+    "See the [solution](solutions.ipynb#Quadratic-solution)."
    ]
   },
   {
@@ -464,6 +463,42 @@
    "metadata": {},
    "source": [
     "In data science this is usually not what we want to do with lists of numbers. Instead, we want to do operations on each element of the list. For this we need a *different* data structure called an *array*. With arrays we can do algebraic operations. We discuss those next."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb35bd88-e7f0-4534-8ada-de739ce129f5",
+   "metadata": {},
+   "source": [
+    "```{note} \n",
+    "You may get errors if you try unsupported operations. Here is what one looks like.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "95998a4c-512e-4006-960f-2e24061e17c1",
+   "metadata": {
+    "tags": [
+     "raises-exception"
+    ]
+   },
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for -: 'str' and 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mtree\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mree\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'str' and 'str'"
+     ]
+    }
+   ],
+   "source": [
+    "'tree' - 'ree'"
    ]
   },
   {
@@ -1418,7 +1453,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
