update soln link

--- a/sams/introduction.ipynb
+++ b/sams/introduction.ipynb
@@ -82,7 +82,7 @@
    "id": "7752a815-dc9d-40a6-a196-26f49d69f6b7",
    "metadata": {},
    "source": [
-    "See the [solution](solutions.ipynb#Hello-SAMS)."
+    "See the [solution](./solutions.ipynb#Hello-SAMS)."
    ]
   },
   {
