--- a/_sources/introduction.ipynb
+++ b/_sources/introduction.ipynb
@@ -363,7 +363,7 @@
    "id": "5fee2333-b099-4664-8ab5-92a3a9970224",
    "metadata": {},
    "source": [
-    "See the [solution](solutions.ipynb#Quadratic-solution)."
+    "See the [solution](./solutions.ipynb#Quadratic-solution)."
    ]
   },
   {
